[package]
name = "grafana_cmd_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.16.0"

metrics = "0.19"

prometheus = { version = "0.13.0", features = ["process"] }
#prometheus-static-metric = "0.4"
lazy_static = "1.4.0"

tokio = { version = "1.20.0", features = ["full"] }
# opentelemetry example
opentelemetry = { version = "0.17.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.16.0"
